Corrected welcome page layout: block horizontal overflow and set carousel dynamic hight

--- a/app/assets/stylesheets/mystyle.css.scss
+++ b/app/assets/stylesheets/mystyle.css.scss
@@ -102,7 +102,7 @@ $dropDown       : true;
 
 
 
-.carousel{height:500px;}
+.carousel{height:100%;}
 .carousel-inner{height:100%;}
 .fill{width:100%;height:100%;background-position:center;background-size:cover;}
 
@@ -114,7 +114,7 @@ $dropDown       : true;
   text-align: center;
 }
 /* keep full widget on smaller screens */
-@media (max-width: 767px) { 
+@media (max-width: 800px) { 
   body {
     padding-left: 0;
     padding-right: 0;
